change to using java 11